# Calculator

./: .gitignore  .gitlab-ci.yml  .gitlab-ci.yml.swp  CMakeLists.txt  Calculator.cpp  Calculator.h  README.md  Tests.cpp  main.cpp
